# picksbackend

./: .gitignore  ARCHITECTURE.md  Anchor.toml  README.md  hardhat.config.js  index.js  package-lock.json  package.json
contracts/prediction/: OutcomeShare.sol  PredictionMarket.sol  PredictionMarketNative.sol
programs/picks_market/: Cargo.toml  README.md
programs/picks_market/src/: lib.rs
scripts/: claim-market.js  create-market.js  deploy-market.js  manual-refund.js  resolve-market.js
supabase/migrations/: 20251110T180000_add_creator_fee_columns.sql
