[package]
name = "picks_market"
version = "0.1.0"
edition = "2021"
description = "Native-SOL YES/NO prediction market. Mirror of picksbackend/contracts/prediction/PredictionMarketNative.sol."
license = "MIT"

[lib]
crate-type = ["cdylib", "lib"]
name = "picks_market"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
anchor-spl = { version = "0.30.1", features = ["token_2022"] }
